--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable(lab1 main.cpp lab1_utils.cpp)
+add_executable(lab1 main.cpp src/lab1_utils.cpp)
 
 
-add_executable(lab1_tests test.cpp lab1_utils.cpp)
+add_executable(lab1_tests test/test.cpp src/lab1_utils.cpp)
 target_link_libraries(lab1_tests GTest::gtest_main)
